Fixed bug in calculation of amount of file to send when nbytes !=0 and headers or trailers are supplied. Reported by Vladislav Shabanov <vs@rambler-co.ru>.

PR:		33771
Submitted by:	Maxim Konovalov <maxim@macomnet.ru>
MFC after:	3 days